--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -141,7 +141,7 @@ body {
   width: 80px;
   height: 80px;
 }
-.payment-option.selected {
+.payment-option.active {
   background: #5a3e2b; /* Warna coklat */
   color: white;
 }
@@ -155,13 +155,17 @@ body {
   border-color: var(--brown-500);
 }
 .btn-order {
-  background: #f8cfcf;
-  color: black;
+  background: var(--pink-500);
+  color: var(--brown-600);
   border-radius: 10px;
   padding: 10px;
   width: 100%;
   border: none;
   font-weight: bold;
+}
+.btn-order:hover {
+  background: var(--pink-600);
+  color: var(--brown-600);
 }
 .sidebar-right h4 {
   margin-bottom: 20px;
@@ -169,6 +173,10 @@ body {
 .main-content {
   margin-left: 15%;
   width: 60%;
+}
+.second-content {
+  margin-left: 15%;
+  width: 100%;
 }
 /* Search Bar */
 .search-bar {
@@ -289,6 +297,153 @@ body {
   border: none;
   border-radius: 50%;
   cursor: pointer;
+}
+.card-container-stock {
+  width: 25%;
+  gap: 20px;
+}
+.custom-card-stock {
+  border: 1px solid #f1e7e5;
+  border-radius: 10px;
+  padding: 15px;
+  background-color: white;
+  gap: 20px;
+}
+.custom-icon-stock {
+  width: 40px;
+  height: 40px;
+  background-color: #f1e7e5;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 5px;
+}
+.custom-icon-stock img {
+  width: 35px;
+}
+.custom-text-stock {
+  font-size: 14px;
+  color: #704a3e;
+}
+.customer-count-stock {
+  margin-left: 10px;
+  font-size: 28px;
+  font-weight: bold;
+  color: #4a2e25;
+}
+.footer-section-stock {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: white;
+  padding: 8px;
+  border-radius: 10px;
+  margin-top: 5px;
+}
+.footer-badge-stock {
+  background-color: #9ce4ce;
+  color: #4a2e25;
+  font-size: 12px;
+  padding: 5px 10px;
+  border-radius: 20px;
+}
+.percentage-badge-stock {
+  background-color: #f4b6b0;
+  color: #4a2e25;
+  font-size: 12px;
+  padding: 5px 10px;
+  border-radius: 20px;
+}
+.chart-container {
+  background-color: #fffaf9;
+  border-radius: 12px;
+  padding: 15px;
+}
+.product-table img {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+.product-table td {
+  vertical-align: middle;
+}
+.chart-stock {
+  width: 60%;
+}
+.favorite-stock {
+  width: 40%;
+}
+.stat-stock {
+  width: 60%;
+}
+.card {
+  border-radius: 12px;
+  border: 1px solid #f1e7e5;
+  background-color: #fffaf9;
+  padding: 15px;
+}
+.filter-order {
+  margin-left: 15%;
+  width: 100%;
+  margin-top: 10px;
+  margin-right: 10px;
+}
+.filter-container {
+  background-color: #f7e8e8;
+  padding: 10px 15px;
+  border-radius: 8px;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.filter-container span {
+  color: #6c757d;
+  margin-right: 5px;
+}
+
+.filter-input {
+  width: 150px;
+  margin-right: 10px;
+}
+
+.filter-container button {
+  margin-left: auto;
+}
+.status-done {
+  color: #28a745;
+  font-weight: bold;
+}
+.paid {
+  background-color: #ffd2d2;
+  color: #a34242;
+  font-size: 12px;
+  padding: 5px 10px;
+  border-radius: 20px;
+}
+.paid.success {
+  background-color: #9ce4ce;
+  color: #255a4a;
+  font-size: 12px;
+  padding: 5px 10px;
+  border-radius: 20px;
+}
+.btn-detail-order {
+  background-color: #64f0f4;
+  color: #1c5d60;
+  font-size: 12px;
+  padding: 5px 10px;
+  border-radius: 20px;
+}
+.table {
+  background-color: transparent; /* Menghilangkan background tabel */
+}
+
+.table th,
+.table td {
+  background-color: transparent; /* Menghilangkan background dari sel */
+  border-bottom: 1px solid var(--brown-200); /* Menambahkan garis bawah dengan warna kustom */
 }
 
 @media (max-width: 768px) {
