--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -89,7 +89,7 @@ body {
   margin: 18px;
 }
 .order-list {
-  max-height: 50vh;
+  max-height: 45vh;
   overflow-y: auto;
 }
 .order-item {
@@ -332,6 +332,9 @@ body {
   font-weight: bold;
   color: #4a2e25;
 }
+.member-icon {
+  width: 20px;
+}
 .footer-section-stock {
   display: flex;
   justify-content: space-between;
@@ -444,6 +447,361 @@ body {
 .table td {
   background-color: transparent; /* Menghilangkan background dari sel */
   border-bottom: 1px solid var(--brown-200); /* Menambahkan garis bawah dengan warna kustom */
+}
+
+.right-modal {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 25%;
+  height: 100%;
+  background-color: #f4f4f4;
+  box-shadow: -4px 0px 10px rgba(0, 0, 0, 0.2);
+  transform: translateX(100%);
+  transition: transform 0.3s ease-in-out;
+  padding: 20px;
+  z-index: 1000;
+}
+.right-modal.show {
+  transform: translateX(0);
+}
+.modal-content {
+  margin-top: 10%;
+}
+.header-modal {
+  text-align: center;
+}
+.modal-close {
+  position: absolute;
+  top: 5px;
+  left: 10px;
+  font-size: 20px;
+  cursor: pointer;
+}
+.info {
+  margin-top: 30px;
+}
+.info table {
+  width: 100%;
+  margin: 15px 0;
+}
+
+.info td {
+  padding: 5px 5px; /* Mengatur padding lebih kecil agar jarak antar kolom lebih rapat */
+}
+
+.table-borderless td,
+.table-borderless th {
+  border: none;
+}
+
+.info td:first-child {
+  width: 40%;
+}
+
+.info td:last-child {
+  width: 60%; /* Memastikan kolom kedua lebih lebar dan menghindari spasi berlebih */
+}
+/* Memberikan border bawah pada thead */
+.table-modal thead th {
+  border-bottom: 2px solid #000; /* Tambahkan border bawah */
+}
+
+.table-product-modal {
+  margin-left: 15px;
+  width: auto;
+  height: 300px;
+  max-height: 300px;
+  max-width: 100%;
+  overflow-x: auto;
+}
+.table-modal {
+  width: 100%;
+  border-collapse: collapse;
+}
+.table-modal tbody td {
+  border: none; /* Menghilangkan border di baris body */
+}
+.table-modal tbody tr td {
+  padding-block: 5px;
+}
+
+/* Mengatur teks agar berada di tengah untuk td dan th di kolom kedua dan ketiga */
+.table-modal td:nth-child(2),
+.table-modal td:nth-child(3),
+.table-modal th:nth-child(2),
+.table-modal th:nth-child(3) {
+  text-align: center; /* Menyelaraskan teks di tengah secara horizontal */
+  vertical-align: middle; /* Menyelaraskan teks di tengah secara vertikal */
+}
+
+.total-info {
+  text-align: right;
+}
+
+.right-aligned-table {
+  margin-left: auto;
+  margin-right: 0;
+  width: auto;
+}
+
+.right-aligned-table td {
+  padding: 5px 10px;
+}
+
+.container-member {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.search-input-member {
+  padding: 5px;
+  font-size: 10px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  margin-right: 10px;
+  width: 100%;
+}
+
+.search-input-member:focus {
+  outline: none;
+  border-color: #8b5e3c;
+}
+
+.search-results {
+  border: 1px solid #ccc;
+  max-height: 200px;
+  overflow-y: auto;
+  margin-top: 5px;
+  border-radius: 5px;
+  background-color: white;
+  display: none;
+  position: absolute;
+  width: 90%;
+  z-index: 9999;
+}
+
+.result-item {
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  cursor: pointer;
+}
+
+.result-item:hover {
+  background-color: #f0f0f0;
+}
+
+.toast-center-center {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+/* Menambahkan margin dan gaya untuk gambar dan teks */
+#toast-container > div {
+  opacity: 1 !important;
+}
+.toast-info {
+  background-color: white !important;
+  height: 450px !important;
+  width: 500px !important;
+  color: var(--brown-500) !important;
+  border-radius: 20px !important;
+}
+.toast-info .toast-message {
+  font-size: 40px;
+  font-weight: 600;
+  display: flex !important;
+  flex-direction: column !important;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+}
+.toast-info .toast-message img {
+  width: 30%; /* Ukuran gambar */
+}
+.icon-membership {
+  width: 25px;
+}
+.add-member-btn {
+  display: inline-flex; /* Menjaga teks dan gambar sejajar secara horizontal */
+  align-items: center; /* Menjaga gambar sejajar vertikal dengan teks */
+  padding: 10px 20px; /* Padding dalam tombol untuk jarak antara teks dan border */
+  font-size: 16px; /* Ukuran teks */
+  background-color: var(--pink-500);
+  color: var(--brown-500); /* Warna teks */
+  border: 2px solid var(--brown-500); /* Border berwarna coklat tua */
+  border-radius: 30px; /* Membuat sudut tombol melengkung */
+  cursor: pointer; /* Menampilkan kursor pointer saat hover */
+  transition: background-color 0.3s, border-color 0.3s; /* Efek transisi saat hover */
+}
+.add-member-btn img {
+  margin-left: 8px; /* Memberikan jarak antara teks dan gambar */
+  width: 16px; /* Ukuran gambar */
+  height: 16px; /* Ukuran gambar */
+}
+.add-member-btn:hover {
+  background-color: var(--brown-500); /* Warna latar belakang saat hover */
+  color: var(--pink-200); /* Warna teks saat hover */
+  border-color: var(--brown-500); /* Menjaga border tetap sama saat hover */
+}
+.add-member-text {
+  color: var(--brown-500);
+  font-size: 20px;
+  font-weight: 500;
+}
+/* Styling for the table */
+.table-member {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
+  font-family: Arial, sans-serif;
+  background-color: transparent; /* Menghilangkan latar belakang tabel */
+}
+
+/* Styling for the table cells */
+.table-member th,
+.table-member td {
+  padding: 5px;
+  text-align: center; /* Menjaga teks di dalam sel agar terletak di tengah */
+  border-bottom: 2px solid var(--brown-200); /* Hanya menampilkan border bawah */
+  background-color: transparent; /* Menghilangkan background pada setiap cell */
+}
+
+/* Styling for the table header */
+.table-member th {
+  color: #4f2c1d;
+  background-color: transparent; /* Menghilangkan background header */
+}
+
+/* Styling for action buttons */
+.table-member .btn-edit,
+.table-member .btn-delete {
+  background-color: transparent;
+  cursor: pointer;
+  transition: color 0.3s;
+  border: none;
+}
+
+/* Style untuk Modal */
+.member-modal {
+  display: none; /* Modal tersembunyi secara default */
+  position: fixed; /* Modal diposisikan tetap di layar */
+  top: 0;
+  left: 0;
+  width: 85%; /* Lebar modal 100% dari layar */
+  height: 100%; /* Tinggi modal 100% dari layar */
+  background-color: rgba(0, 0, 0, 0.5); /* Latar belakang semi-transparan */
+  z-index: 1000; /* Modal tampil di atas elemen lainnya */
+  margin-left: 15%; /* Memberikan margin kiri 20% dari lebar layar */
+}
+
+/* Style untuk konten modal */
+.member-modal-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(
+    -50%,
+    -50%
+  ); /* Untuk memastikan modal berada di tengah */
+  background-color: var(--pink-500);
+  padding: 20px;
+  width: 100%; /* Ukuran konten modal (60% dari lebar layar) */
+  height: 100%;
+  box-shadow: inset -10px 0 20px rgba(0, 0, 0, 0.2);
+}
+
+/* Tombol untuk menutup modal */
+.close-btn {
+  position: absolute;
+  top: 10px;
+  right: 20px;
+  font-size: 30px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.close-btn:hover {
+  color: red;
+}
+
+.membership-form {
+  display: flex;
+  flex-direction: column;
+}
+
+.form-group {
+  margin-bottom: 20px;
+}
+
+.form-group label {
+  font-size: 14px;
+  color: #4f2c1d;
+}
+
+.required {
+  color: red;
+  font-weight: bold;
+}
+
+.form-group input {
+  padding: 10px;
+  font-size: 16px;
+  margin-top: 5px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  width: 100%;
+}
+
+.membership-form table {
+  width: 100%;
+  table-layout: fixed; /* Ensures even spacing */
+  border-collapse: collapse;
+  margin-block: 20px;
+}
+
+.membership-form td {
+  padding: 10px;
+  vertical-align: top;
+}
+
+.membership-form td:first-child {
+  width: 10%; /* Labels take up 20% of the space */
+}
+
+.membership-form td:last-child {
+  width: 90%; /* Inputs take up the remaining 80% */
+}
+
+.membership-form input {
+  width: 100%; /* Make input fields span the full width of their cells */
+  border-radius: 5px;
+  padding-inline: 10px;
+  border: none;
+}
+
+.add-btn-member {
+  display: block;
+  width: 50%;
+  margin: 20px auto;
+  padding: 10px;
+  text-align: center;
+  background-color: var(--brown-500);
+  color: var(--pink-50);
+  border-radius: 10px;
+  border: none;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.add-btn-member img {
+  width: 20px;
+  margin-inline: 10px;
 }
 
 @media (max-width: 768px) {
